--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://BinayT.github.io/react-todo-ts",
+  "homepage": "http://BinayT.github.io/rick-morty-tsx",
   "name": "rick-morty-tsx",
   "version": "0.1.0",
   "private": true,
